* BUG#8858 Force all_addresses to empty list when importing and creating a party with addresses
* BUG#8859 Modification of the is_person information is possible if and only if there is no personal data set like the first name or the birth date

Version 2.0 - 2018-04-13
* FEA#8644 Vertical realignment of the fields on the party view form header
* BUG#8362 Remove now useless party configuration view override
* BUG#8074 Return the most recent valid address in get_address
* BUG#7630 Fix a bug where the custom party identifiers were no longer available

Version 1.14 - 2017-11-09
* BUG#7403 Clear zip and city when changing an addresse's country
* BUG#7388 Fix JSON import export
* BUG#6794 Forbid writing a zip code when it is used in other addresses
* BUG#6841 Modify the authorisations on the zip code in order to give the right of modification / creation to a users with party administration right and move ZipCode menu toparty configuration.
* BUG#7191 Add default sequence on party configuration
* BUG#6993 Removing simple json import
* BUG#6811 Do not switch to list view when creating a new address
* OTH#0000 Avoid adresse duplication when duplicate or import a party
* FIX#0000 Fix 'all_addresses' field in party form view
* FEA#6130 Improve "REFLEX" flag by using the  active/inactive field on addresses
* BUG#6423 Display : full address field holds in one line
* BUG#6366 Add control on party birth date
* FEA#6310 Improve the return to sender flag using active/inactive field on addresses

Version 1.12 - 2017-04-28
* FEA#0000 Merge party functionality
* FEA#0000 Add long gender field

Version 1.10 - 2016-11-02
* FEA#0000 Allow to search party from SSN information
* FEA#0000 Behaviour change : A party is either a company (by default) or a person but it can not be both anymore

Version 1.8 - 2016-07-06
* FEA#0000 Allow to extend party identifier type possible values through configuration

Version 1.6 - 2015-12-23
* FEA#0000 Remove contact from party when deleted